--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"dev": "nodemon src/index.js"
 	},
 	"dependencies": {
+		"@google-cloud/aiplatform": "^3.35.0",
 		"@hono/node-server": "^1.13.8",
 		"hono": "^4.7.4"
 	},
