--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"dependencies": {
 		"@google-cloud/aiplatform": "^3.35.0",
 		"@hono/node-server": "^1.13.8",
+		"@prisma/client": "^6.5.0",
 		"hono": "^4.7.4"
 	},
 	"devDependencies": {
