--- a/package.json
+++ b/package.json
@@ -14,22 +14,22 @@
 	"homepage": "https://muses.robr.app",
 	"type": "module",
 	"scripts": {
-		"dev": "nodemon src/index.js"
+		"deploy": "wrangler deploy",
+		"dev": "wrangler dev",
+		"start": "wrangler dev"
 	},
 	"dependencies": {
 		"@google-cloud/aiplatform": "^3.35.0",
-		"@hono/node-server": "^1.13.8",
-		"@prisma/client": "^6.5.0",
-		"hono": "^4.7.4"
+		"@prisma/adapter-d1": "^6.5.0",
+		"@prisma/client": "^6.5.0"
 	},
 	"devDependencies": {
+		"@cloudflare/vitest-pool-workers": "^0.7.5",
 		"@eslint/js": "^9.22.0",
 		"@types/node": "^22.13.10",
-		"dotenv": "^16.4.7",
 		"eslint": "^9.22.0",
 		"eslint-plugin-import": "^2.31.0",
-		"globals": "^16.0.0",
-		"nodemon": "^3.1.9"
+		"wrangler": "^4.0.0"
 	},
 	"packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
