--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 	"dependencies": {
 		"@google-cloud/aiplatform": "^3.35.0",
 		"@prisma/adapter-d1": "^6.5.0",
-		"@prisma/client": "^6.5.0"
+		"@prisma/client": "^6.5.0",
+		"hono": "^4.7.4"
 	},
 	"devDependencies": {
 		"@cloudflare/vitest-pool-workers": "^0.7.5",
