--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"scripts": {
 		"deploy": "wrangler deploy",
 		"dev": "wrangler dev",
+		"devremote": "wrangler dev --remote",
 		"start": "wrangler dev"
 	},
 	"dependencies": {
