--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -16,7 +16,17 @@
 			"database_name": "muses",
 			"database_id": "f2d34c78-43a3-436a-93a2-427f527c2afe"
 		}
-	]
+	],
+	"r2_buckets": [
+		{
+			"binding": "STORAGE",
+			"bucket_name": "muses",
+			"preview_bucket_name": "muses-dev"
+		}
+	],
+	"images": {
+		"binding": "IMAGES"
+	}
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
