Updating Wrangler dep and version bump

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -23,5 +23,13 @@
 	],
 	"images": {
 		"binding": "IMAGES"
+	},
+	"assets": {
+		"directory": "public"
+	},
+	"triggers": {
+		"crons": [
+      		"0 */4 * * *"
+		]
 	}
 }
