--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -5,7 +5,8 @@
 	"compatibility_flags": ["nodejs_compat"],
 	"compatibility_date": "2025-03-19",
 	"observability": {
-		"enabled": true
+		"enabled": true,
+		"head_sampling_rate": 1
 	},
 	"d1_databases": [
 		{
@@ -31,5 +32,5 @@
 		"crons": [
       		"0 */4 * * *"
 		]
-	}
+	},
 }
