--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 	"dependencies": {
 		"@prisma/adapter-d1": "^6.5.0",
 		"@prisma/client": "^6.5.0",
-		"hono": "^4.7.4"
+		"hono": "^4.7.4",
+		"zod": "^3.24.3"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.22.0",
